stored run config. fixed issue with javafx